# mitk-gem

./: .gitignore  .gitmodules  CMakeLists.txt  GraphWrapper.hxx  ImageGraphCut3D.h  ImageGraphCut3D.hpp  ImageGraphCut3DFilter.h  ImageGraphCut3DFilter.hxx  LICENSE.txt  MaxFlowGraph.hxx  MaxFlowGraphBoost.hxx  MaxFlowGraphIBFS.hxx  MaxFlowGraphKolmogorov.hxx  README.md  SuperBuild.cmake  files.cmake  manifest_headers.cmake  plugin.xml
Apps/MITK-GEM/: CMakeLists.txt  MITK-GEM.cpp
Apps/VCLabWorkbench/: VCLabWorkbench.cpp
Apps/Workbench/: Workbench.cpp
CMake/: CPackSetup.cmake  CTestCustom.cmake.in  mitkFunctionWhitelists.cmake
CMake/Whitelists/: GenerateCMakeArgs.ps1  GenerateCMakeArgs.sh  VCLab.cmake
CMakeExternals/: MITK.cmake
Examples/: CMakeLists.txt  ImageGraphCut3DSegmentationExample.cpp
Kolmogorov/: block.h  graph.cpp  graph.h  maxflow.cpp
Kolmogorov/Tests/: CMakeLists.txt  MaxflowTest.cpp
Modules/: CMakeLists.txt
Modules/GemCore/: CMakeLists.txt  files.cmake
Modules/GemCore/autoload/IO/: AnsysFileWriterService.h  AsciiUgridFileWriterService.cpp  AsciiUgridFileWriterService.h  CMakeLists.txt  GemIOMimeTypes.cpp  GemIOMimeTypes.h  GemIOResources.h  files.cmake  mitkNewModuleIOActivator.cpp  mitkUnstructuredGridSerializer.cpp  mitkUnstructuredGridSerializer.h
Modules/GemCore/include/: AwesomeImageFilter.h  AwesomeImageInteractor.h
Modules/GemCore/resource/Interactions/: Paint.xml
Modules/GemCore/src/: AwesomeImageFilter.cpp  AwesomeImageInteractor.cpp
Modules/GemMesher/: CMakeLists.txt  files.cmake
Modules/GemMesher/include/: IMesher.h  MesherCGAL.h  MesherTetgen.h
Modules/GemMesher/src/: IMesher.cpp  MesherCGAL.cpp  MesherTetgen.cpp
Modules/GemMesher/src/internal/: MeshHelpers.cpp  MeshHelpers.h
Modules/MyAwesomeLib/: CMakeLists.txt
Modules/MyAwesomeLib/autoload/IO/: AnsysFileWriterService.cpp  AnsysFileWriterService.h  CMakeLists.txt  GemIOMimeTypes.cpp  GemIOMimeTypes.h  files.cmake  mitkNewModuleIOActivator.cpp
Modules/MyAwesomeLib/include/: AwesomeImageFilter.h  AwesomeImageInteractor.h
Modules/MyAwesomeLib/resource/Interactions/: PaintConfig.xml
Plugins/: Plugins.cmake
Plugins/ch.eth.gemio/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/ch.eth.gemio/src/internal/: GemIOView.cpp  GemIOView.h  GemIOViewControls.ui  ch_eth_gemio_Activator.cpp  ch_eth_gemio_Activator.h
Plugins/ch.zhaw.gemapplication/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/ch.zhaw.gemapplication/resources/: GemApplication.qrc
Plugins/ch.zhaw.gemapplication/src/: AnsysFileWriterService.h  WorkbenchUtils.cpp  WorkbenchUtils.h
Plugins/ch.zhaw.gemapplication/src/internal/: QmitkExtAppWorkbenchAdvisor.cpp  QmitkExtAppWorkbenchAdvisor.h  QmitkExtApplicationPlugin.cpp
Plugins/ch.zhaw.graphcut/: .gitmodules  CMakeLists.txt  README.md  files.cmake  manifest_headers.cmake
Plugins/ch.zhaw.graphcut/src/internal/lib/GraphCut3D/Examples/: CMakeLists.txt  ImageGraphCut3DSegmentationExample.cpp  ImageMultiLabelGraphCut3DSegmentationExample.cpp
Plugins/ch.zhaw.materialmapping/: CMakeLists.txt  LICENSE.txt  files.cmake  manifest_headers.cmake
Plugins/ch.zhaw.materialmapping/resources/: measurement_example.txt  resources.qrc
Plugins/ch.zhaw.padding/: .gitmodules  CMakeLists.txt  manifest_headers.cmake  plugin.xml
Plugins/ch.zhaw.resample/: .gitignore  CMakeLists.txt  README.md  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/ch.zhaw.ugvisualization/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/ch.zhaw.volumemesh/: CMakeLists.txt  files.cmake  manifest_headers.cmake
Plugins/ch.zhaw.voxel2mesh/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  files.cmake  manifest_headers.cmake  plugin.xml
Scripts/: KfileToVtu_example.py  VtuToKfile_example.py  WriteAnsysInput.m  writeAbaqusInput.m
data/: createTestImagesFor3DGraphCutTest.m  testBackgroundMask.mhd  testBackgroundMask.raw  testCube10x10x10.mhd  testCube10x10x10.raw  testCube10x10x10Noisy_0p01.mhd  testCube10x10x10Noisy_0p01.raw  testForegroundMask.mhd  testSegmentedCube.mhd  testSegmentedCube_no11.mhd  testSegmentedCube_no11.raw  testSegmentedNoisyCube.mhd  testSegmentedNoisyCube_no11.mhd  testSegmentedNoisyCube_no11.raw  writeImagesAsUcharMHD.m
data/test/: createTestImagesFor3DGraphCutTest.m  writeImagesAsUcharMHD.m
data/test/3x3x3/: backgroundMask.raw  expectedResult.mhd  foregroundMask.mhd  input.raw
data/test/cube10x10x10/: cubeNoisy_0p01.raw  foregroundMask.mhd  foregroundMask.raw  output.raw
data/test/femur/: README.md  background.nrrd  expectedResult.nrrd  foreground.nrrd
data/test/left_femur/: expectedResult.nrrd
documentation/UserManual/: Manual.dox
documentation/doxygen/: modules.dox
lib/ibfs/: CMakeLists.txt  ibfs.cpp  ibfs.h
lib/kolmogorov-3.03/: CMakeLists.txt
resources/: GraphCut.qrc  icon.xpm  logo.xcf
src/internal/: BoneDensityFunctor.cpp  BoneDensityFunctor.h  BoneDensityParameters.cpp  BoneDensityParameters.h  CalibrationDataModel.cpp  CalibrationDataModel.h  Functors.h  GraphcutView.cpp  GraphcutView.h  GraphcutViewControls.ui  GraphcutWorker.cpp  GraphcutWorker.h  GuiHelpers.h  MaterialMappingFilter.cpp  MaterialMappingFilter.h  MaterialMappingView.cpp  MaterialMappingView.h  MaterialMappingViewControls.ui  PaddingView.cpp  PaddingView.h  PaddingViewControls.ui  PowerLawFunctor.cpp  PowerLawFunctor.h  PowerLawParameters.cpp  PowerLawParameters.h  PowerLawWidget.cpp  PowerLawWidget.h  PowerLawWidgetManager.cpp  PowerLawWidgetManager.h  ResampleView.cpp  ResampleView.h  ResampleViewControls.ui  SurfaceToUnstructuredGridFilter.cpp  SurfaceToUnstructuredGridFilter.h  TetgenOptionGrid.cpp  TetgenOptionGrid.h  TetgenOptionRow.cpp  TetgenOptionRow.h  VolumeMeshView.cpp  VolumeMeshView.h  (+22 more)
src/internal/test/: BoneDensityTest.cpp  PowerLawFunctorTest.cpp  PowerLawWidgetTest.cpp  Runner.cpp  Runner.h
test/: CMakeLists.txt  IOHelper.hxx  TestBoostGraphLibrary.cpp  TestGraphLibrary.cpp  TestImageGraphCut3D.cpp  TestImageGraphCut3DFilter.cpp  TestSegmentation.cpp  test.cpp
(+130 files in other folders)
